✨ feat(src): Use react-bootstrap

--- a/src/components/my-estate-page/styles.scss
+++ b/src/components/my-estate-page/styles.scss
@@ -10,9 +10,9 @@ $theme-colors: (
   background-size: contain;
 }
 
-.nav-link {
-  border-radius: var(--bs-border-radius-pill);
-}
+// .nav-link {
+//   border-radius: var(--bs-border-radius-pill);
+// }
 
 .nav-link:hover,
 .nav-link:focus {
